--- a/_publications/2021-cdc-stochastic-control.html
+++ b/_publications/2021-cdc-stochastic-control.html
@@ -10,3 +10,18 @@ citation:
 ---
 
 Kernel embeddings of distributions have recently gained significant attention in the machine learning community as a data-driven technique for representing probability distributions. Broadly, these techniques enable efficient computation of expectations by representing integral operators as elements in a reproducing kernel Hilbert space. We apply these techniques to the area of stochastic optimal control theory and present a method to compute approximately optimal policies for stochastic systems with arbitrary disturbances. Our approach reduces the optimization problem to a linear program, which can easily be solved via the Lagrangian dual, without resorting to gradient-based optimization algorithms. We focus on discrete- time dynamic programming, and demonstrate our proposed approach on a linear regulation problem, and on a nonlinear target tracking problem. This approach is broadly applicable to a wide variety of optimal control problems, and provides a means of working with stochastic systems in a data-driven setting.
+
+<div id="bibtex" style="display:none">
+@INPROCEEDINGS{9682801,
+    author={Thorpe, Adam J. and Oishi, Meeko M. K.},
+    booktitle={2021 60th IEEE Conference on Decision and Control (CDC)}, 
+    title={Stochastic Optimal Control via Hilbert Space Embeddings of Distributions}, 
+    year={2021},
+    volume={},
+    number={},
+    pages={904-911},
+    doi={10.1109/CDC45484.2021.9682801}
+}
+</div>
+
+<button onclick="copyToClipboard('#bibtex')" class="btn btn-primary">Copy BibTeX</button>
